# amazon_top_100_bestsellers

./: README.md  main.py  pyproject.toml
pages/: book_reviews.py
